[gd_scene load_steps=4 format=3 uid="uid://ckkgl10utu0i8"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesCorticalAreaMonitoring.gd" id="1_ofec4"]
[ext_resource type="Texture2D" uid="uid://m0g8f4fqi1wb" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/toggle_off.png" id="3_008v8"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/Buttons/ToggleButton.gd" id="4_gi7tw"]

[node name="CorticalPropertiesCorticalMonitoring" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofec4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Membrane Monitoring"

[node name="Membrane" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
texture_normal = ExtResource("3_008v8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_gi7tw")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Post-Synaptic  Monitoring"

[node name="PostSynaptic" type="TextureButton" parent="HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
texture_normal = ExtResource("3_008v8")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_gi7tw")

[connection signal="toggled" from="HBoxContainer/Membrane" to="." method="_user_request_change_membrane_monitoring_status"]
[connection signal="toggled" from="HBoxContainer2/PostSynaptic" to="." method="_user_request_change_synaptic_monitoring_status"]
